--- a/main.css
+++ b/main.css
@@ -1,16 +1,37 @@
+@font-face {
+    font-family: "vecterminus14";
+    src: url("VecTerminus14Medium.otf") format("truetype");
+}
+
+@font-face {
+    font-family: "vecterminus28";
+    src: url("VecTerminus28Medium.otf") format("truetype");
+}
+
 :root {
-    font-family: monospace;
-    font-size: 16px;
+    font-family: vecterminus14, monospace;
+    font-size: 14px;
     color: rgb(202, 202, 202);
 }
 
 body {
-    background-color: rgb(32, 32, 32);
+    text-shadow: #ddd 0 0 15px;
+    background-color: rgb(25, 25, 25);
+}
+
+h1 {
+    font-family: vecterminus28, monospace;
+    font-size: 28px;
 }
 
 a {
     color: white;
 }
+
+div.main-stuff {
+    margin: 0 20% 0 20%;
+}
+
 
 img#uuh:hover {
     animation: uuh 1s ease-in-out 0s 1 forwards;
@@ -32,9 +53,17 @@ div.toogay {
 }
 
 div.pride {
-    font-size: 32px;
+    /* font-size: 32px; */
+    text-shadow: none;
     width: fit-content;
     animation: spin 300ms linear 0s infinite
+}
+
+div.pride::before {
+    content: "🏳️‍⚧️";
+    position: absolute;
+    z-index: -1;
+    filter: blur(10px);
 }
 
 img#scream {
