--- a/main.css
+++ b/main.css
@@ -28,22 +28,19 @@ a {
     color: white;
 }
 
+.bloom {
+    position: absolute;
+    mix-blend-mode: screen;
+    filter: blur(10px) brightness(0.9) opacity(0.5);
+}
+
+.backdrop {
+    position: absolute;
+    z-index: -1;
+}
+
 div.main-stuff {
     margin: 0 20% 0 20%;
-}
-
-
-img#uuh:hover {
-    animation: uuh 1s ease-in-out 0s 1 forwards;
-}
-
-@keyframes uuh {
-    from {
-        transform: rotateY(0deg);
-    }
-    to {
-        transform: rotateY(360deg);
-    }
 }
 
 div.toogay {
@@ -61,9 +58,8 @@ div.pride {
 
 div.pride::before {
     content: "🏳️‍⚧️";
-    position: absolute;
-    z-index: -1;
     filter: blur(10px);
+    position: absolute;
 }
 
 img#scream {
