make the underline on links not as awful

--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,7 @@
     }
 
     a {
-        @apply underline;
+        @apply underline underline-offset-2;
         @apply dark:text-white;
         @apply text-blue-400;
     }
