--- a/src/app.css
+++ b/src/app.css
@@ -40,12 +40,12 @@
     }
 
     h1 {
-        @apply text-[32px] mt-2 mb-2
+        @apply text-[32px] mt-2 mb-2;
     }
 
     code {
         @apply [text-shadow:none] font-sourceCodePro text-sm p-5;
-        @apply dark:bg-zinc-900
+        @apply dark:bg-zinc-900;
     }
 
     ul {
@@ -53,12 +53,12 @@
     }
 
     li::marker {
-        content: "* "
+        content: "* ";
     }
 
     hr {
         @apply border mt-5 mb-5;
-        @apply dark:border-zinc-600 border-zinc-300
+        @apply dark:border-zinc-600 border-zinc-300;
     }
 
     a {
@@ -67,12 +67,12 @@
         @apply text-blue-400;
     }
 
-    a>* {
+    a > * {
         @apply dark:text-neutral-300 text-black;
     }
 }
 
 .tippy-box {
     @apply p-2 border rounded-lg shadow-lg;
-    @apply dark:border-zinc-700 border-zinc-300
+    @apply dark:border-zinc-700 border-zinc-300;
 }
