--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@
         @apply transition-colors;
         @apply min-h-[100vh];
         @apply text-[16px];
-        @apply bg-teal-800 text-neutral-300 selection:bg-violet-400;
+        @apply bg-teal-800 text-black selection:bg-violet-400;
     }
 
     button {
@@ -41,14 +41,14 @@
     input[type="text"],
     input[type="number"],
     select {
-        @apply bg-zinc-900 py-0.5 px-2 border border-zinc-700;
+        @apply bg-zinc-300 py-0.5 px-2 border border-zinc-700;
         appearance: textfield;
     }
 
     input[type="text"]:disabled,
     input[type="number"]:disabled,
     select:disabled {
-        @apply bg-zinc-800;
+        @apply bg-zinc-300 text-neutral-400;
     }
 
     input[type="number"] {
@@ -65,10 +65,6 @@
         @apply text-[32px] mt-2 mb-2;
     }
 
-    code {
-        @apply [text-shadow:none] font-sourceCodePro text-sm p-5;
-    }
-
     ul {
         @apply pl-6;
     }
@@ -78,13 +74,13 @@
     }
 
     hr {
-        @apply border mt-5 mb-5;
-        @apply dark:border-zinc-600 border-zinc-300;
+        @apply border my-5;
+        @apply border-zinc-300;
     }
 
     a {
         @apply underline underline-offset-2;
-        @apply text-blue-400;
+        @apply text-blue-700;
     }
 
     a > * {
@@ -93,6 +89,6 @@
 }
 
 .tippy-box {
-    @apply py-1 px-2 border rounded-lg shadow-lg;
-    @apply border-zinc-700 bg-zinc-800;
+    @apply py-1 px-2 border border-neutral-600;
+    @apply bg-neutral-300;
 }
