--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,32 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+    --font-*: initial;
+    --font-mono: vecterminus, ui-monospace, monospace;
+    --font-source-code-pro: SourceCodePro;
+    --font-vec-terminus: vecterminus;
+    --font-tamzen: Tamzen;
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-gray-200, currentcolor);
+    }
+}
 
 @font-face {
     font-family: vecterminus;
@@ -25,7 +51,7 @@
     }
 
     body {
-        @apply min-h-[100vh];
+        @apply min-h-screen;
         @apply text-[16px];
         @apply bg-teal-800 text-black selection:bg-violet-400;
     }
